--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <button id="guardarBtn1">Guardar</button>
     </div>
     <!--resultado debajo del boton operacion-->
-    <div id="resultado1" style="position: absolute; top: 7%;"></div>
+    <div id="resultado1" style="position: absolute; top: 7%; width: 80px; height: 80px;"></div>
 
     <!--boton operario-->
     <button id="operarioBtn2"
@@ -27,7 +27,7 @@
     cursor: pointer;">Operario</button>
 
     <!--campo ocul;to para escrivir el operario-->
-    <div id="campo2" style="display: none; position: absolute; top: 10%;">
+    <div id="campo2" style="display: none; position: absolute; top: 10%; left: 50%;">
         <input type="text" id="nombreOperario" placeholder="nombre del operario">
         <button id="guardarBtn2">Guardar</button>
     </div>
@@ -37,7 +37,7 @@
     <!--boton redondo-->
     <button id="redondoBtn"
     style="border-radius: 50%; width: 200px; height: 200px; background-color: #4CAF50;
-    justify-content: center; position: absolute; top: 30%; left: 25%; border: none;
+    justify-content: center; position: absolute; top: 15%; left: 25%; border: none;
     cursor: pointer; display: flex; flex-direction: column; justify-content: center; align-items: center;
     "><span class="top" style="font-size: 20px; color: white; position: absolute; top: 10%; display: none;">0</span>
       <span class="center" style="font-size: 60px; color: black;">0</span>
