--- a/index.html
+++ b/index.html
@@ -43,20 +43,35 @@
       <span class="center" style="font-size: 60px; color: black;">0</span>
       <span class="height" style="font-size: 20px; color: white; position: absolute; top: 80%; display: none;">0</span></button>
 
+    <!--boton porcentaje-->
+    <button style="width: 80px; height: 80px; background-color: darkgray; color: black;
+    font-size: 20px; justify-content: center; position: absolute; top: 55%; left: 10%; border: none;
+    border-radius: 5%; line-height: 1.4;">%<br>0</button>
+
     <!--boton meta-->
     <button style="width: 80px; height: 80px; background-color: darkgray; color: black;
-    font-size: 20px; justify-content: center; position: absolute; top: 70%; left: 10%; border: none;
+    font-size: 20px; justify-content: center; position: absolute; top: 55%; left: 40%; border: none;
     border-radius: 5%; cursor: pointer; line-height: 1.4;">Meta<br>0</button>
-
-    <!--boton ritmo-->
-    <button style="width: 80px; height: 80px; background-color: darkgrey; color: black;
-    font-size: 20px; justify-content: center; position: absolute; top: 70%; left: 40%; border: none;
-    border-radius: 5%; line-height: 1.4;">Ritmo<br>0</button>
 
     <!--boton dia-->
     <button style="width: 80px; height: 80px; background-color: darkgrey; color: black; 
-    font-size: 20px; justify-content: center; position: absolute; top: 70%; left: 70%; border: none;
+    font-size: 20px; justify-content: center; position: absolute; top: 55%; left: 70%; border: none;
     border-radius: 5%; line-height: 1.4;">Dia<br>0</button>
+
+    <!--boton ritmo-->
+    <button style="width: 80px; height: 80px; background-color: darkgrey; color: black;
+    font-size: 20px; justify-content: center; position: absolute; top: 70%; left:70%; border: none;
+    border-radius: 5%; line-height: 1.4;">Ritmo<br>0</button> 
+    
+    <!--boton saldo-->
+    <button style="width: 80px; height: 80px; background-color: darkgray; color: black;
+    font-size: 20px; justify-content: center; position: absolute; top: 70%; left: 10%; border: none;
+    border-radius: 5%; line-height: 1.4;">Saldo<br>0</button>
+
+    <!--boton acumulado-->
+    <button style="width: 80px; height: 80px; background-color: darkgray; color: black;
+    font-size: 20px; justify-content: center; position: absolute; top: 70%; left: 40%; border: none;
+    border-radius: 5%; line-height: 1.4;">ACC<br>0</button>
 
     <!--boton de cerrar secion-->
     <button style="width: 150px; height: 30px; background-color: indianred; color: black; 
