--- a/index.html
+++ b/index.html
@@ -87,7 +87,6 @@
     <button style="width: 150px; height: 30px; background-color: indianred; color: black; 
     font-size: 20px; justify-content: center; position: absolute; top: 90%; border: none;
     border-radius: 5%; cursor: pointer;">Cerrar Sesion</button>
-
 <script>
 // ===== OPERACIÓN =====
 const operacionBtn1 = document.getElementById("operacionBtn1");
@@ -145,9 +144,7 @@ let timer = null;
 let seconds = 0;
 let meta = 0;
 let horaInicio = new Date();
-let clickTimes = []; // guarda las marcas de tiempo de los clics recientes
-const windowSeconds = 3600; // segundos usados para medir el ritmo (ajusta si quieres)
-
+let clickTimes = [];
 
 // 🌀 Reiniciar botón
 function reiniciarBoton() {
@@ -160,6 +157,7 @@ function reiniciarBoton() {
   porcentajeBtn.innerHTML = `%<br>0`;
   ritmoBtn.innerHTML = `Ritmo<br>0`;
   horaInicio = new Date();
+  clickTimes = [];
   console.log("🔄 Botón reiniciado automáticamente a la hora exacta");
 
   redondoBtn.style.backgroundColor = "#2E7D32";
@@ -187,44 +185,51 @@ function programarReinicioCadaHora() {
 
 programarReinicioCadaHora();
 
+// ===== FUNCIONES DE CÁLCULO =====
+
+// ✅ Actualiza el porcentaje
+function actualizarPorcentaje() {
+  if (meta > 0) {
+    const porcentaje = ((clickCount / meta) * 100).toFixed(1);
+    porcentajeBtn.innerHTML = `%<br>${porcentaje}`;
+  } else {
+    porcentajeBtn.innerHTML = `%<br>0`;
+  }
+}
+
+// ✅ Nueva función de ritmo mejorada
+function actualizarRitmo() {
+  const ahora = new Date();
+
+  // Minuto actual dentro de la hora (0–59)
+  const minutoActual = ahora.getMinutes();
+
+  // Si es la primera vez, definimos la hora de inicio
+  if (!horaInicio) horaInicio = new Date();
+
+  const minutosTranscurridos = (ahora - horaInicio) / 1000 / 60;
+  const minutosRestantes = Math.max(0, 60 - minutoActual);
+
+  if (minutosTranscurridos > 0) {
+    // Ritmo actual (clicks/hora)
+    const ritmoPorHora = (clickCount / minutosTranscurridos) * 60;
+
+    // Proyección real al final de la hora actual
+    const proyeccionHora = clickCount + (ritmoPorHora / 60) * minutosRestantes;
+
+    ritmoBtn.innerHTML = `Ritmo<br>${Math.round(proyeccionHora)}`;
+  }
+}
+
 // ⚡ Evento de clic en el botón redondo
 redondoBtn.addEventListener("click", () => {
   clickCount++;
   centerNum.textContent = clickCount;
 
-  // Calcular porcentaje
-  if (meta > 0) {
-    const porcentaje = ((clickCount / meta) * 100).toFixed(1);
-    porcentajeBtn.innerHTML = `%<br>${porcentaje}`;
-  }
+  actualizarPorcentaje();
+  actualizarRitmo(); // ✅ se recalcula el ritmo en cada clic
 
- // Calcular ritmo basado en la ventana de tiempo reciente
-const now = Date.now();
-clickTimes.push(now);
-
-// eliminar clics más antiguos que el rango de ventana
-while (clickTimes.length && clickTimes[0] < now - windowSeconds * 1000) {
-  clickTimes.shift();
-}
-
-const ahora = new Date();
-const minutosTranscurridos = (ahora - horaInicio) / 1000 / 60;
-const minutosRestantes = Math.max(0, 60 - minutosTranscurridos);
-let ritmoProyectado = clickCount;
-
-const clicksEnVentana = clickTimes.length;
-
-if (clicksEnVentana > 0) {
-  const ratePerSec = clicksEnVentana / windowSeconds;
-  const futurosClicks = ratePerSec * minutosRestantes * 60;
-  ritmoProyectado = clickCount + futurosClicks;
-}
-
-ritmoBtn.innerHTML = `Ritmo<br>${Math.round(ritmoProyectado)}`;
-
-
-
-  // Control del cronómetro inferior
+  // ===== Control del cronómetro inferior (lap) =====
   if (clickCount === 1) {
     seconds = 0;
     heightNum.textContent = seconds;
@@ -250,7 +255,6 @@ ritmoBtn.innerHTML = `Ritmo<br>${Math.round(ritmoProyectado)}`;
   }
 });
 
-
 // ===== BOTÓN META =====
 const campo3 = document.getElementById("campo3");
 const guardarBtn3 = document.getElementById("guardarBtn3");
@@ -268,12 +272,12 @@ guardarBtn3.addEventListener("click", () => {
     metaBtn.innerHTML = `Meta<br>${meta}`;
     input3.value = "";
     campo3.style.display = "none";
+    actualizarPorcentaje();
   } else {
     alert("Por favor ingresa un número válido para la meta.");
   }
 });
 </script>
-
 
 </body>
 </html>
